Add GitHub link to admin index

--- a/media/templates/admin/nav_sidebar.html
+++ b/media/templates/admin/nav_sidebar.html
@@ -28,6 +28,13 @@
       <tr class="model-tools">
         <th scope="row"><a href="/">{% translate "Site Home" %}</a></th>
       </tr>
+      <tr class="model-tools">
+        <th scope="row">
+          <a href="https://github.com/jonocodes/stashcast" target="_blank" rel="noopener noreferrer">
+            {% translate "GitHub project" %}
+          </a>
+        </th>
+      </tr>
 
     </table>
   </div>
